welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:7: error: type mismatch;
 found   : Int
 required: String
				sol=i
                                    ^indexOfValue:9: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^indexOfValue:18: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^