welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var V=false
	var sol=""
	if (nums!=0) {
		for (i <- nums) {
			if(value==nums(i)) {
				sol=i
				V=true
				return sol
				} else {
					V=false 	
				}
				
		} 
		if (V==false) {
		return -1
			} else {
				return sol
			}
	}
	else {
		return -1
	}
}
